# cpp-pong

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AIPaddle.hpp  Application.hpp  Ball.hpp  Entity.hpp  GameManager.hpp  LeftPaddle.hpp  Paddle.hpp  PaddlePosition.hpp  PlayerPaddle.hpp  Position.hpp  RightPaddle.hpp  Score.hpp  Utility.hpp
src/: AIPaddle.cpp  Application.cpp  Ball.cpp  Entity.cpp  GameManager.cpp  Paddle.cpp  PlayerPaddle.cpp
